--- a/views/layout.njk
+++ b/views/layout.njk
@@ -9,16 +9,32 @@
 </head>
 <body>
     <header>
-        <div class="links">
-            <div class="logo">
-                <a href="/" id="foodfy"><img src="/assets/logo.png" alt=""></a>
-            </div>
-            <div class="menu">
-            <a href="/sobre" id="sobre">Sobre</a>
-            <a href="/" id="receitas">Receitas</a>
+            <div class="menu-section">
+                <div >
+                    <div class="logo">
+                        <a href="/"><img src="/assets/logo.png" alt=""></a>
+                    </div>
+                    <div class="menu-toggle">
+                        <div class="one"></div>
+                        <div class="two"></div>
+                        <div class="three"></div>
+                    </div>
+                </div>
+               
+                <nav>
+                    <ul>
+                        <li>
+                             <a href="/sobre" id="sobre">Sobre</a>
+                        </li>
+                        <li>
+                            <a href="/" id="receitas">Receitas</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </header>
+
     <section class="wrapper-section">
         {% block content %}{% endblock %}
 
