--- a/views/layoutAdmin.njk
+++ b/views/layoutAdmin.njk
@@ -12,7 +12,7 @@
             <div class="menu-section">
                 <div >
                     <div class="logo">
-                        <a href="/"><img src="/assets/logo-white.png" alt=""></a>
+                        <a href="/admin/recipes"><img src="/assets/logo-white.png" alt=""></a>
                     </div>
                     <div class="menu-toggle">
                         <div class="one"></div>
