--- a/public/styles.css
+++ b/public/styles.css
@@ -12,6 +12,7 @@ body {
 
 header.container {
   background: #111;
+  margin-bottom: 50px;
 }
 
 .menu-section {
@@ -40,14 +41,13 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-  color: #DF1CC5;
+  font-weight: bold;
   transition: 0.3s ease-in-out;
 }
 
 .wrapper-section {
     width: 80%;
     margin: auto;
-    padding-top: 55px;
 }
 
 .wrapper .container {
@@ -55,7 +55,7 @@ header nav ul li a:hover {
     border-radius: 30px;
     width: 100%;
     height: 366px;
-    display: grid;
+    display: flex;
     grid-template-columns: 1fr 1fr;
 }
 
@@ -121,7 +121,6 @@ footer .copyright {
 /*== PAGE ABOUT ==*/
 
 section .title-sobre {
-    margin-top: 50px;
     font-size: 24px;
 }
 
@@ -240,7 +239,7 @@ input {
 }
 
 .create-title {
-    padding: 55px 0 30px;
+    padding-bottom: 30px;
     font-size: 24px;
     line-height: 34px;
 }
