--- a/views/recipes/index.njk
+++ b/views/recipes/index.njk
@@ -10,7 +10,7 @@
             <div class="content-recipe">
               <h1>Triplo bacon burger</h1>
               <h2>por Jorge Relato</h2>
-              <a>Visualizar</a>
+              <a href="/admin/recipes/{{ recipe.id }}">Visualizar</a>
             </div>
         </div>
       {% endfor %}
