Update foodfy fields

--- a/views/recipes/fields.njk
+++ b/views/recipes/fields.njk
@@ -28,6 +28,7 @@
         <div class="prepare">
             <input type="text" name="preparation[]" value="{{ prepare }}"/>
         </div>
+        {% endfor %}
     </div>
         <button type="button" class="add-new-step">Adicionar novo passo</button>
 </div>
