--- a/views/recipes/show.njk
+++ b/views/recipes/show.njk
@@ -5,7 +5,7 @@
         <div>
           <div class="menu-recipe">
             <h1>Receita: Triplo Bacon Burguer</h1>
-            <button type="submit">Editar receita</button>
+            <a href="/admin/recipes/{{ recipe.id }}/edit">Editar receita</a>
           </div>
             <div class="menu-image_recipe">
                 <img src="{{ recipe.image_url }}" alt="Imagem de">
