--- a/views/recipes/create.njk
+++ b/views/recipes/create.njk
@@ -8,8 +8,7 @@
                 <button type="submit" class="btn-submit">Salvar receita</button>
             </div>
 
-            {% include "recipes/fields.njk" %}
-            
+            {% include 'recipes/fields.njk' %}           
         </section>
     </form>
 {% endblock %}
