Update Foodfy fields

--- a/views/recipes/fields.njk
+++ b/views/recipes/fields.njk
@@ -12,9 +12,13 @@
 <div class="item">
     <div class="title-item">Ingredientes</div>
     <div id="ingredients">
-        <div class="ingredient">
-            <input type="text" name="ingredients[]" value="{{ ingredient }}"/>
-        </div>
+        {% if not recipe.ingredients %}
+            <input type="text" name="preparation[]" value="">
+        {% else %}
+            {% for ingredient in recipe.ingredients %}
+                    <input type="text" name="ingredients[]" value="{{ ingredient }}">
+            {% endfor %}
+        {% endif %}
     </div>
         <button type="button" class="add-ingredient">Adicionar novo ingrediente</button>
 </div>
@@ -22,9 +26,13 @@
 <div class="item">
     <div class="title-item">Modo de preparo</div>
     <div id="prepare">
-        <div class="prepare">
-            <input type="text" name="preparation[]" value="{{ prepare }}"/>
-        </div>
+        {% if not recipe.preparation %}
+                <input type="text" name="preparation[]" value="">
+        {% else %}
+            {% for prepare in recipe.preparation %}
+                    <input type="text" name="preparation[]" value="{{ prepare }}">
+            {% endfor %}
+        {% endif %}
     </div>
         <button type="button" class="add-new-step">Adicionar novo passo</button>
 </div>
